# blog

./: .djlintrc  .gitignore  README.md  db.sql  freeze.py  pyproject.toml
src/: main.py
src/static/css/: style.css
src/templates/: base.html  index.html  navbar.html
static_files/: index.html
static_files/static/css/: style.css
static_files/static/scss/: custom.scss
